# src/main/java/jee/model/User.java
@@ -1,0 +1,58 @@
+package jee.model;
+
+import jakarta.persistence.*;
+
+@Entity
+@Table(name = "utilisateurs")
+public class User {
+    @Id
+    @GeneratedValue(strategy = GenerationType.AUTO)
+    private long id = 0L;
+
+    @Column(nullable = false)
+    private String login;
+
+    private String firstname;
+
+    private String lastname;
+
+    public User() {
+        this("");
+    }
+
+    public User(final String login) {
+        this.login = login;
+    }
+
+    public long getId() {
+        return id;
+    }
+
+    public void setId(final long id) {
+        this.id = id;
+    }
+
+    public String getLogin() {
+        return login;
+    }
+
+    public void setLogin(final String login) {
+        this.login = login;
+    }
+
+    public String getFirstname() {
+        return firstname;
+    }
+
+    public void setFirstname(final String firstname) {
+        this.firstname = firstname;
+    }
+
+    public String getLastname() {
+        return lastname;
+    }
+
+    public void setLastname(final String lastname) {
+        this.lastname = lastname;
+    }
+}
